--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
+    "build:prod": "NODE_ENV=production vue-tsc && vite build --mode production",
+    "build:package": "./build.tar.sh",
     "preview": "vite preview",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -14,12 +16,16 @@
     "lint:style": "stylelint \"src/**/*.{css,scss,vue}\" --fix",
     "format": "prettier --write .",
     "prepare": "husky install",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit",
+    "clean": "rm -rf dist build asuswrt-merlin-nginxui.tar.gz",
+    "analyze": "vite build --mode analyze"
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "pinia": "^2.1.0",
     "vue": "^3.4.0",
-    "vue-i18n": "^9.8.0"
+    "vue-i18n": "^9.8.0",
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.12.0",
@@ -40,6 +46,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.69.0",
     "stylelint": "^16.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
@@ -47,10 +54,12 @@
     "stylelint-config-standard-scss": "^13.0.0",
     "stylelint-order": "^6.0.0",
     "stylelint-scss": "^6.0.0",
+    "terser": "^5.43.1",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.0",
     "vite": "^5.0.0",
+    "vite-bundle-analyzer": "^0.7.0",
     "vite-plugin-css-injected-by-js": "^3.5.2",
     "vue-tsc": "^1.8.0"
   },
