Update project files and add new configuration files

--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "build:prod": "NODE_ENV=production vue-tsc && vite build --mode production",
     "build:package": "./build.tar.sh",
     "preview": "vite preview",
+    "watch": "vite build --watch",
+    "sync": "./sync.sh",
+    "sync:test": "./sync.sh test",
+    "deploy": "npm run build && ./sync.sh",
+    "dev:script": "./dev.sh",
+    "dev:build": "./dev.sh build",
+    "dev:watch": "./dev.sh watch",
+    "dev:preview": "./dev.sh preview",
+    "dev:test": "./dev.sh test",
+    "dev:clean": "./dev.sh clean",
+    "dev:status": "./dev.sh status",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
